--- a/app/views/contact_groups/_form.html.erb
+++ b/app/views/contact_groups/_form.html.erb
@@ -1,5 +1,5 @@
 <div id="form_facebox_ajax">
-  <%= form_for(@contact_group, :remote => true) do |f| %>
+  <%= form_for(@contact_group, :remote => true, :validate => true) do |f| %>
       <div class="facebox_form">
         <table cellspacing="0" cellpadding="0">
           <tr>
