--- a/app/views/posts/_small_preview.html.erb
+++ b/app/views/posts/_small_preview.html.erb
@@ -1,6 +1,6 @@
 <li class="team-item">
   <div class="item-top clearfix">
-    <h3><%= link_to post.title, post %></h3>
+    <h3><%= link_to truncate(post.title, :length => 40), post %></h3>
     <div class="which-college">by: <%= link_to(post.user.try(:username), post.user, :class => :author) %></div>
     <div class="votes">
       <%= image_tag('like.png') %>
@@ -16,7 +16,7 @@
     <% end %>
   </div>
   <div class="summary">
-    <%= truncate(post.summary, :length => 70) %>
+    <%= truncate(post.summary, :length => 75) %>
   </div>
   <%= share_icons(post, :preview) %>
 </li>
