--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -2,32 +2,15 @@
   <div class="title_wrapper clearfix">
     <div class="cont_title"><h1>Edit comment</h1></div>
   </div>
-  <div class="form_container post_form">
-    <div class="form_wrapper">
-      <%= form_for @comment do |f| %>
-        <div class="table_padding">
-          <table cellpadding="0" cellspacing="0">
-            <tr>
-              <td class="description va-top"><%= f.label :comment, 'Comment:' %></td>
-              <td class="entry"><%= f.text_area :comment %></td>
-            </tr>
-          </table>
-          <div class="confirmation_container clearfix">
-            <div class="accept clearfix">
-              <div class="important_notice clearfix">
-              </div>
-              <div class="blue_button"><%= f.submit "SUBMIT" %></div>
-            </div>
-          </div>
-          <div class="confirmation_container clearfix">
-            <div class="accept clearfix">
-              <div class="important_notice clearfix">
-              </div>
-              <div class="blue_button"><%= button_to "DELETE", @comment, :method => :delete, :confirm => "Are you sure?" %></div>
-            </div>
-          </div>
-        </div>
-      <% end %>
+  <%= form_for @comment, :html => {:class => "semantic left_align"} do |f| %>
+    <div class="field">
+      <%= f.label :comment, 'Comment:' %>
+      <%= f.text_area :comment, :class => "autosize", :cols => "76", :rows => "8" %></td>
     </div>
-  </div>
+
+    <div class="field actions">
+      <div class="blue_button"><%= f.submit "SUBMIT" %></div>
+      <div class="blue_button"><%= button_to "DELETE", @comment, :method => :delete, :confirm => "Are you sure?" %></div>
+    </div>
+  <% end %>
 </div>
