--- a/app/views/conferences/_stats_widget.html.erb
+++ b/app/views/conferences/_stats_widget.html.erb
@@ -1,17 +1,18 @@
 <div class="inbox_table">
   <div class="thh clearfix">
-    <div class="black colname"><%= conference.name %></div>
+    <div class="black colname"><%= truncate(conference.name, :length => 12) %></div>
     <div class="smcount">S</div>
     <div class="redcount">R</div>
   </div>
 
+  <%# FIXME move this logic to controller. No, really, view is not a place for queries like this. %>
   <% conferences = conference.colleges.limit(limit).order('smacks_count desc') %>
   <% conferences.each_with_index do |college, i| %>
     <div class="cell clearfix <% if i == conferences.size-1 %>noborder<% end %>">
-        <div class="black colname"><%= link_to college.abbrev, college %></div>
-        <div class="green smcount"><%= college.smacks_count %></div>
-        <div class="red redcount"><%= college.redemptions_count %></div>
-      </div>
+      <div class="black colname"><%= link_to college.abbrev, college %></div>
+      <div class="green smcount"><%= college.smacks_count %></div>
+      <div class="red redcount"><%= college.redemptions_count %></div>
+    </div>
   <% end %>
   <% if limit %>
       <div class="stat_center">
