--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @contact, :remote => true do |f| %>
+<%= form_for @contact, :remote => true, :validate => true do |f| %>
   <div class="facebox_form">
     <table cellspacing="0" cellpadding="0">
       <tr>
