--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -44,11 +44,11 @@
               <input type="checkbox" value="0" name="cb" class="select_all"/>
             </div>
             <ul class="table_actions" style="list-style-type: none">
-              <% if !params[:group_id].blank? && ContactGroup.exists?(params[:group_id]) == true %>
-                <li><%= link_to("Remove Group", @group, :confirm => "Are yo sure?", :method => :delete, :remote => true, :class => "table_button", :id => "remove_group_button") %></li>
-              <%end%>
               <li><%= link_to("Add To Group", add_to_group_form_contact_groups_path(@contact), :method => "GET", :remote => true, :class => "table_button", :id => "add_to_group_button") %></li>
               <li id="delete_selected" class="table_button fakebtn">Delete selected</li>
+              <% if !params[:group_id].blank? && ContactGroup.exists?(params[:group_id]) == true %>
+              <li id="remove_selected" class="table_button fakebtn">Remove selected</li>
+              <%end%>
             </ul>
           </div>
           <div id="contact_list">
