--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,7 +2,7 @@
   <div class="content_actions">
     <ul>
       <% if can? :report, @post %>
-        <li>
+        <li class="dark_button">
           <%= link_to('Report Post', report_post_path(@post), :class => 'button postreport', :id => "post_rep_#{@post.id}") %>
         </li>
       <% end %>
@@ -71,20 +71,19 @@
         <br class="clear"/>
 
         <div class="content_title2">Comments</div>
-        <% if signed_in? %>
-          <div class="add_comment">
-            <%= form_for [@post, Comment.new], :remote => true do |f| %>
-              <%= render '/shared/comments', :f => f %>
-              <div>
-                <%= f.submit "Submit Comment" %>
-              </div>
-            <% end %>
-          </div>
-        <% end %>
+
         <%= will_paginate(@comments) %>
         <div class="comments_container">
           <%= render :partial => @post.comments %>
         </div>
+        <% if signed_in? %>
+          <div class="add_comment">
+            <%= form_for [@post, Comment.new], :remote => true do |f| %>
+              <%= render '/shared/comments', :f => f %>
+              <%= f.submit "Comment", :class => "blue_button right" %>
+            <% end %>
+          </div>
+        <% end %>
 
       </div>
       <%= render 'shared/report_form' %>
