--- a/public/stylesheets/utility_components.css
+++ b/public/stylesheets/utility_components.css
@@ -13,15 +13,20 @@
     display: block;
     height: 28px;
     background: url('/images/bg_blue_button.png') repeat-x;
+    text-align: center;
+    margin: 0 5px;
+    border: none;
+    color: #fff;
+    font-family: Conv_MyriadPro-BoldCond;
+    text-transform: uppercase;
+    font-size: 20px;
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
     -khtml-border-radius: 5px;
     border-radius: 5px;
-    text-align: center;
-    margin: 0 5px;
 }
 
-.blue_button a {
+.blue_button a, .blue_button input {
     display: block;
     padding-top: 4px;
     color: #fff;
