--- a/app/views/contact_groups/index.js.erb
+++ b/app/views/contact_groups/index.js.erb
@@ -11,7 +11,7 @@
         <%= link_to 'Edit', edit_contact_group_path(contact_group), :remote => true, :class => "facebox_link table_button black" %>
       </td>
       <td class="row_actions">
-         <%= link_to 'Destroy', contact_group, :confirm => "Are yo sure?", :method => :delete, :remote => true, :class => "table_button black" %>
+         <%= link_to 'Destroy', contact_group, :confirm => "Are you sure?", :method => :delete, :remote => true, :class => "table_button black" %>
       </td>
     </tr>
   <% end %>
