Fixed add recipient issue, some refactoring, fixed edit comment page.

--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -10,7 +10,7 @@
 
     <div class="field actions">
       <div class="blue_button"><%= f.submit "SUBMIT" %></div>
-      <div class="blue_button"><%= button_to "DELETE", @comment, :method => :delete, :confirm => "Are you sure?" %></div>
+      <div class="blue_button"><%= link_to "DELETE", @comment, :method => :delete, :confirm => "Are you sure?" %></div>
     </div>
   <% end %>
 </div>
