--- a/app/views/contact_groups/add_to_group.js.erb
+++ b/app/views/contact_groups/add_to_group.js.erb
@@ -1,10 +1,9 @@
 <% if(params[:group_type] == 'new') %>
   <% if(!@group.new_record?) %>
-     var h = $('.contact_groups').height();
-     $('.contact_groups').html("<table><td class='ajax_loader' style='height:" + h + "px;'><img src='/images/ajax-loader.gif'/></td></table>");
-     $('.contact_groups').load(this.location + ' ' + '.contact_groups' );
+     reload_contacts_groups();
     <%= close_facebox()%>
   <% end %>
 <% else %>
   <%= close_facebox()%>
 <% end %>
+clear_checkboxes();
