--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -3,7 +3,7 @@
   <div class="content_actions">
     <ul>
       <li class="ajax"><img src='/images/ajax-loader.gif'/></li>
-      <li class="dark_button"><%= link_to 'New Contact', new_contact_path, :remote => true, :class => "new" %></li>
+      <li class="dark_button"><%= link_to 'New Contact', new_contact_path(:group_id => params[:group_id]), :remote => true, :class => "new" %></li>
       <li class="dark_button"><%= render :partial => 'contacts/import_form' -%></li>
     </ul>
   </div>
@@ -37,6 +37,7 @@
               </li>
           <% end %>
           <% end %>
+          <li class="add_edit_group clearfix"><a href="<%=contact_groups_path%>" data-remote="true">Edit / Add groups<span class="ajax" style="display: none;"><img src='/images/ajax-cb-loader.gif'/></span></a></li>
         </ul>
         <div class="table_content">
           <div class="table_head">
@@ -47,7 +48,7 @@
               <li><%= link_to("Add To Group", add_to_group_form_contact_groups_path(@contact), :method => "GET", :remote => true, :class => "table_button", :id => "add_to_group_button") %></li>
               <li id="delete_selected" class="table_button fakebtn">Delete selected</li>
               <% if !params[:group_id].blank? && ContactGroup.exists?(params[:group_id]) == true %>
-              <li id="remove_selected" class="table_button fakebtn">Remove selected</li>
+              <li id="remove_selected" class="table_button fakebtn" title="remove<%=params[:group_id]%>">Remove selected</li>
               <%end%>
             </ul>
           </div>
@@ -58,9 +59,8 @@
           </div>
           <input type="hidden" name="groupname" value="<%= @group.name %>"/>
         </div>
-        <div class="add_edit_group clearfix"><%= link_to 'Edit / Add groups', contact_groups_path, :remote => true %><span class="ajax"><img src='/images/ajax-cb-loader.gif'/></span></div>
       </div>
-      <div class="pagination">
+      <div class="pagination" id="pagination_container">
         <%= will_paginate @contacts %>
       </div>
     </div>
