--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,4 +1,25 @@
-<%= render 'form' %>
+<%= form_for @contact, :remote => true, :validate => true do |f| %>
+  <div class="facebox_form">
+    <table cellspacing="0" cellpadding="0">
+      <tr>
+        <td class="description"><%= f.label :name, 'Name:' %></td>
+        <td class="entry"><%= f.text_field :name %></td>
+      </tr>
+      <tr>
+        <td class="description"><%= f.label :email, 'Email:' %></td>
+        <td class="entry"><%= f.text_field :email %></td>
+      </tr>
+      <%=hidden_field_tag 'group_id',params[:group_id]%>
+    </table>
+    <div class="confirmation_container clearfix">
+      <div class="accept clearfix">
+        <div class="important_notice clearfix">
+        </div>
+        <div class="blue_button"><%= f.submit "SUBMIT" %></div>
+      </div>
+    </div>
+  </div>
+<% end %>
 <script>
   $("#new_contact").validate();
 </script>
