--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
             |
             <%= link_to 'Profile', edit_user_registration_path, :class => "white" %>
             |
-            <%= link_to 'Sign Out', sign_out_path, :class => "white" %>
+            <%= link_to 'Help', help_path, :class => "white" %>
         <% end %>
       </div>
 
