--- a/app/views/pages/help.html.erb
+++ b/app/views/pages/help.html.erb
@@ -1,4 +1,6 @@
-<h1>Help</h1>
-<p>
+<div class="content new_level">
+  <div class="content_header clearfix">
+    <div class="content_title">HELP</div>
+  </div>
 I can't help you, try therapy....
-</p>
+</div>
