--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,8 +4,9 @@
       <div id="stats_container" class="table_middle">
         <%# FIXME widget shows stats only for I-A now %>
         <%# Conference.where(:division => session[:division]).each do |conference| %>
-        <% Conference.where(:division => 'I-A').each do |conference| %>
-            <%= render :partial => 'conferences/stats_widget', :locals => {:conference => conference, :limit => 3} %>
+        <% conferences = Conference.where(:division => 'I-A').order('name asc') %>
+		<% conferences.each do |conference| %>
+        <%= render :partial => 'conferences/stats_widget', :locals => {:conference => conference, :limit => 3} %>
         <% end %>
       </div>
     </div>
