--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,6 +41,7 @@
         <% unless current_user %>
             <span>sign in:</span>
             <a href="/sign_in" class="network icon"></a>
+			<%= header_service_link(:google_apps) %>
             <%= header_service_link(:facebook) %>
             <%= header_service_link(:twitter) %>
             <div class="line"></div>
