--- a/app/views/welcome/_sotw.html.erb
+++ b/app/views/welcome/_sotw.html.erb
@@ -1,5 +1,5 @@
 <div class="content standard clearfix">
-  <div class="content_title"><h1>Smacks of the week</h1></div>
+  <div class="content_title"><h1>Smacks of the Week</h1></div>
   <div class="content_subtitle">
     <%= render :partial => 'shared/search' %>
   </div>
